// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopConsumers /> data-renders-correctly 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Top Projects by Used Capacity
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div>
      <div
        class="row"
      >
        <div
          class="kubevirt-top-consumer__time-duration"
        >
          Last 6 hours
        </div>
      </div>
      <div
        class="row"
      >
        <div>
          <div
            class="VictoryContainer"
            style="height:100%;width:100%;user-select:none;pointer-events:none;touch-action:none;position:relative"
          >
            <svg
              aria-labelledby="victory-container-1-title victory-container-1-desc"
              height="175"
              role="img"
              style="pointer-events:all;width:100%;height:100%"
              viewBox="0 0 451 175"
              width="451"
            >
              <g>
                <g
                  clip-path="url(#victory-clip-2)"
                  style="height:100%;width:100%;user-select:none"
                >
                  <defs>
                    <clipPath
                      id="victory-clip-2"
                    >
                      <rect
                        height="125"
                        role="presentation"
                        shape-rendering="auto"
                        vector-effect="non-scaling-stroke"
                        width="396"
                        x="40"
                        y="30"
                      />
                    </clipPath>
                  </defs>
                  <path
                    d="M40,30L119.2,30L198.4,30L277.6,30L356.8,30L436,30"
                    role="presentation"
                    shape-rendering="auto"
                    style="fill:none;stroke:#39a5dc;width:25px;stroke-width:2"
                  />
                </g>
              </g>
              <g
                role="presentation"
              >
                <line
                  role="presentation"
                  shape-rendering="auto"
                  style="stroke:#72767b;fill:transparent;stroke-width:1;stroke-linecap:round;stroke-linejoin:round"
                  vector-effect="non-scaling-stroke"
                  x1="40"
                  x2="436"
                  y1="155"
                  y2="155"
                />
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="40"
                    y1="155"
                    y2="30"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="40"
                    y1="155"
                    y2="156"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="6.84"
                    x="40"
                    y="161"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="middle"
                      x="40"
                    >
                      17:05
                    </tspan>
                  </text>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="119.2"
                    x2="119.2"
                    y1="155"
                    y2="30"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="119.2"
                    x2="119.2"
                    y1="155"
                    y2="156"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="6.84"
                    x="119.2"
                    y="161"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="middle"
                      x="119.2"
                    >
                      17:10
                    </tspan>
                  </text>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="198.4"
                    x2="198.4"
                    y1="155"
                    y2="30"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="198.4"
                    x2="198.4"
                    y1="155"
                    y2="156"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="6.84"
                    x="198.4"
                    y="161"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="middle"
                      x="198.4"
                    >
                      17:15
                    </tspan>
                  </text>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="277.6"
                    x2="277.6"
                    y1="155"
                    y2="30"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="277.6"
                    x2="277.6"
                    y1="155"
                    y2="156"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="6.84"
                    x="277.6"
                    y="161"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="middle"
                      x="277.6"
                    >
                      17:20
                    </tspan>
                  </text>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="356.8"
                    x2="356.8"
                    y1="155"
                    y2="30"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="356.8"
                    x2="356.8"
                    y1="155"
                    y2="156"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="6.84"
                    x="356.8"
                    y="161"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="middle"
                      x="356.8"
                    >
                      17:25
                    </tspan>
                  </text>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="436"
                    x2="436"
                    y1="155"
                    y2="30"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="436"
                    x2="436"
                    y1="155"
                    y2="156"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="6.84"
                    x="436"
                    y="161"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="middle"
                      x="436"
                    >
                      17:30
                    </tspan>
                  </text>
                </g>
              </g>
              <g
                role="presentation"
              >
                <line
                  role="presentation"
                  shape-rendering="auto"
                  style="stroke:#72767b;fill:transparent;stroke-width:1;stroke-linecap:round;stroke-linejoin:round"
                  vector-effect="non-scaling-stroke"
                  x1="40"
                  x2="40"
                  y1="30"
                  y2="155"
                />
                <text
                  direction="inherit"
                  dx="0"
                  dy="-1.1600000000000001"
                  transform="rotate(-90,15,92.5)"
                  x="15"
                  y="92.5"
                >
                  <tspan
                    dx="0"
                    style="font-size:8px;padding:25px;text-anchor:middle;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                    text-anchor="middle"
                    x="15"
                  >
                    Used Capacity(Mi)
                  </tspan>
                </text>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="436"
                    y1="155"
                    y2="155"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="39"
                    y1="155"
                    y2="155"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="2.84"
                    x="34"
                    y="155"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="end"
                      x="34"
                    >
                      0
                    </tspan>
                  </text>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="436"
                    y1="123.76419809177646"
                    y2="123.76419809177646"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="39"
                    y1="123.76419809177646"
                    y2="123.76419809177646"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="2.84"
                    x="34"
                    y="123.76419809177646"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="end"
                      x="34"
                    >
                      11
                    </tspan>
                  </text>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="436"
                    y1="92.52839618355293"
                    y2="92.52839618355293"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="39"
                    y1="92.52839618355293"
                    y2="92.52839618355293"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="2.84"
                    x="34"
                    y="92.52839618355293"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="end"
                      x="34"
                    >
                      22
                    </tspan>
                  </text>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="436"
                    y1="61.29259427532941"
                    y2="61.29259427532941"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="39"
                    y1="61.29259427532941"
                    y2="61.29259427532941"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="2.84"
                    x="34"
                    y="61.29259427532941"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="end"
                      x="34"
                    >
                      33
                    </tspan>
                  </text>
                </g>
                <g
                  role="presentation"
                >
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:none;fill:none;pointer-events:painted"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="436"
                    y1="30"
                    y2="30"
                  />
                  <line
                    role="presentation"
                    shape-rendering="auto"
                    style="stroke:transparent;fill:transparent;size:1px"
                    vector-effect="non-scaling-stroke"
                    x1="40"
                    x2="39"
                    y1="30"
                    y2="30"
                  />
                  <text
                    direction="inherit"
                    dx="0"
                    dy="2.84"
                    x="34"
                    y="30"
                  >
                    <tspan
                      dx="0"
                      style="font-size:8px;padding:5px;font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;letter-spacing:normal;fill:#282d33;stroke:transparent"
                      text-anchor="end"
                      x="34"
                    >
                      44.02
                    </tspan>
                  </text>
                </g>
              </g>
            </svg>
            <div
              style="z-index:99;position:absolute;top:0;left:0;width:100%;height:100%"
            >
              <svg
                height="175"
                style="overflow:visible;width:100%;height:100%"
                viewBox="0 0 451 175"
                width="451"
              />
            </div>
          </div>
        </div>
        <div
          class="chart-legend"
        >
          <div
            class="VictoryContainer"
            style="pointer-events:none;touch-action:none;position:relative;width:450px;height:30px"
          >
            <svg
              aria-labelledby="victory-container-3-title victory-container-3-desc"
              height="30"
              role="img"
              style="pointer-events:all;width:450px;height:30px"
              width="450"
            >
              <rect
                height="28.700000000000003"
                role="presentation"
                shape-rendering="auto"
                style="fill:none"
                vector-effect="non-scaling-stroke"
                width="164.21538461538458"
                x="50"
                y="8"
              />
              <path
                d="M 59.128, 26.872
      h9.744
      v-9.744
      h-9.744
      z"
                role="presentation"
                shape-rendering="auto"
                style="type:square;fill:#39a5dc"
              />
              <text
                direction="inherit"
                dx="0"
                dy="4.97"
                x="80.8"
                y="22"
              >
                <tspan
                  dx="0"
                  style="font-family:'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif;font-size:14px;letter-spacing:normal;padding:10px;fill:#282d33;stroke:transparent"
                  text-anchor="start"
                  x="80.8"
                >
                  openshift-namespace
                </tspan>
              </text>
            </svg>
            <div
              style="z-index:99;position:absolute;top:0;left:0;width:450px;height:30px"
            >
              <svg
                height="30"
                style="overflow:visible;width:450px;height:30px"
                width="450"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopConsumers /> no-data-renders-correctly 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Top Projects by Used Capacity
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div>
      No data available
    </div>
  </div>
</div>
`;

exports[`<TopConsumers /> render-correctly-on-loading 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Top Projects by Used Capacity
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div>
      <div
        class="spinner spinner-md blank-slate-pf-icon"
      />
    </div>
  </div>
</div>
`;
